# locating

./: README.md
lib/pkgconfig/: apriltags.pc
src/: CMakeCache.txt  CMakeLists.txt  Makefile  apriltags_demo  apriltags_demo.cpp  cmake_install.cmake  libapriltags_demo.dylib  run.py  sock.ipynb  tag_info.json
src/.ipynb_checkpoints/: sock-checkpoint.ipynb
