cmake_minimum_required (VERSION 2.6)
project(apriltags_demo)
include_directories(AprilTags . /opt/local/include)
include_directories("../include")
find_package( PkgConfig REQUIRED)
pkg_check_modules( EIGEN3 REQUIRED eigen3 )
include_directories( ${EIGEN3_INCLUDE_DIRS} )
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
#link_libraries(${OpenCV_LIB_DIRS})
link_directories(${CMAKE_CURRENT_BINARY_DIR}/../lib)
link_libraries(apriltags)
#add_executable(apriltags_demo apriltags_demo.cpp)
#add_library(apriltags_demo SHARED apriltags_demo.cpp)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})